Tri slike po poziciji

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -25,11 +25,11 @@
           [disabled]="resolveFeedbacks" [(ngModel)]="row.valid"></mat-checkbox>-->
 
         <button mat-icon-button color="primary"
-          (click)="openDialog(2, row.secondaryPositionId, row.objectName, row.posClassName, row.posTypeName, row.valid, row.productCategory, row.supplier, row.location,row.comment, row.img); $event.stopPropagation();"
+          (click)="openDialog(2, row.secondaryPositionId, row.objectName, row.posClassName, row.posTypeName, row.valid, row.productCategory, row.supplier, row.location,row.comment, row.img,row.img2,row.img3,row.isImgHorizontal,row.isImgHorizontal2,row.isImgHorizontal3); $event.stopPropagation();"
           style="margin-left:30%">
           <mat-icon area-label="Delete"> delete </mat-icon>
         </button>
-      <button mat-icon-button color="primary" (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.comment,row.img,row.isImgHorizontal); $event.stopPropagation();">
+      <button mat-icon-button color="primary" (click)="openDialog(4,row.secondaryPositionId,row.objectName,row.posClassName,row.posTypeName,row.valid,row.productCategory,row.supplier,row.location,row.comment,row.img,row.img2,row.img3,row.isImgHorizontal,row.isImgHorizontal2,row.isImgHorizontal3); $event.stopPropagation();">
           <mat-icon area-label="Edit">
             edit </mat-icon>
         </button>
@@ -37,7 +37,7 @@
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
-      (click)="openDialog(3, row.secondaryPositionId, row.objectName, row.posClassName, row.posTypeName, row.valid, row.productCategory, row.supplier, row.location,row.comment, row.img,row.isImgHorizontal)">
+      (click)="openDialog(3, row.secondaryPositionId, row.objectName, row.posClassName, row.posTypeName, row.valid, row.productCategory, row.supplier, row.location,row.comment,row.img,row.img2,row.img3,row.isImgHorizontal,row.isImgHorizontal2,row.isImgHorizontal3)">
     </mat-row>
   </mat-table>
   <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white;">
