--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -90,7 +90,7 @@
 
       <button mat-button class="item2" *ngIf="resolveFeedbacks" type="submit" (click)="submitForm()"
         [disabled]="isLoading">Resolve</button>
-      <button mat-button class="item2-delete" (click)="delete()" *ngIf="!resolveFeedbacks">Delete</button>
+      <button mat-button class="item2 item2-delete" (click)="delete()" *ngIf="!resolveFeedbacks">Delete</button>
       <button mat-button class="item2" (click)="close()">Close</button>
       <div *ngIf="isLoading"
         style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
