--- a/src/app/dialogs/objectdialog/objectdialog.component.css
+++ b/src/app/dialogs/objectdialog/objectdialog.component.css
@@ -13,23 +13,29 @@
   flex-grow: 1;
 }
 
-.item2{
-    background-color: white;
-    color: #39ace7;
-    margin-bottom: 4%;
-    border: 2px solid #39ace7;
-  }
-
-
-  button:hover {
-    color: #fff;
-    background-color: #39ace7;
-    transition: 0.3s;
+.item2 {
+  background-color: white;
+  color: #39ace7;
+  margin-bottom: 4%;
+  border: 2px solid #39ace7;
 }
+
+.item2-delete {
+  color: #ff0000;
+  border: 2px solid #ff0000;
+}
+
+button:hover {
+  color: #fff;
+  background-color: #39ace7;
+  transition: 0.3s;
+}
+
 button[disabled]:hover {
-   background-color: #fff;
+  background-color: #fff;
 }
-h3{
+
+h3 {
   color: #39ace7;
 }
 
@@ -40,6 +46,7 @@ mat-form-field {
 button {
   outline: none;
 }
+
 ::ng-deep .mat-button-focus-overlay {
   display: none;
 }
