--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -4,162 +4,180 @@
   <h3 mat-dialog-title *ngIf="flag == 3">Delete object: {{data.objectName}}</h3>
   <h3 mat-dialog-title *ngIf="flag == 4">{{data.objectName}} - details:</h3>
   <form class="mat-dialog-content" #formControl="ngForm">
-<div class="form" *ngIf="flag!=4 && flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name = "objectIdRetail" [disabled]="flag==4"/>
-  </mat-form-field>
-</div>
-<div class="form" *ngIf="flag!=4 && flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==4"/>
-  </mat-form-field>
-</div>
-<div class="form" *ngIf="flag !=4 && flag!=3">
-  <mat-form-field>
-    <mat-select [(ngModel)]="data.retailer" placeholder="Retailer" name="Retailer" [disabled]="flag==4">
-
-        <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
-          {{ retailer.retailerName }}
-        </mat-option>
-
-    </mat-select>
-  </mat-form-field>
-</div>
-
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==4"/>
-  </mat-form-field>
-  <div class="form" *ngIf=" flag!=3">
-    <mat-form-field>
-      <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="true"/>
-    </mat-form-field>
-  </div>
-  <div class="form" *ngIf=" flag!=3">
-    <mat-form-field>
-      <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==4"/>
-    </mat-form-field>
-  </div>
-  <div class="form" *ngIf="flag!=3">
-    <mat-form-field>
-      <input matInput placeholder = "Address" [(ngModel)]="data.address" name = "address" [disabled]="flag==4"/>
-    </mat-form-field>
-  </div>
-
-  <div class="form"*ngIf=" flag!=3">
-    <mat-form-field>
-      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" [disabled]="flag==4"/>
-    </mat-form-field>
-    </div>
-    <div class="form"*ngIf="flag!=3">
+    <div class="form" *ngIf="flag!=4 && flag!=3">
       <mat-form-field>
-        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" [disabled]="flag==4"/>
+        <input matInput placeholder="ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name="objectIdRetail"
+          [disabled]="flag==4" />
       </mat-form-field>
-      </div>
-      <div class="form"*ngIf=" flag!=3">
+    </div>
+    <div class="form" *ngIf="flag!=4 && flag!=3">
+      <mat-form-field>
+        <input matInput placeholder="ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name="objectIdCompany"
+          [disabled]="flag==4" />
+      </mat-form-field>
+    </div>
+    <div class="form" *ngIf="flag !=4 && flag!=3">
+      <mat-form-field>
+        <mat-select [(ngModel)]="data.retailer" placeholder="Retailer" name="Retailer" [disabled]="flag==4">
+
+          <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
+            {{ retailer.retailerName }}
+          </mat-option>
+
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="form" *ngIf="flag!=3">
+      <mat-form-field>
+        <input matInput placeholder="ObjectFormat" [(ngModel)]="data.objectFormat" name="objectFormat"
+          [disabled]="flag==4" />
+      </mat-form-field>
+      <div class="form" *ngIf=" flag!=3">
         <mat-form-field>
-          <input matInput placeholder = "Director" [(ngModel)]="data.director" name = "director" [disabled]="flag==4"/>
+          <input matInput placeholder="ObjectName" [(ngModel)]="data.objectName" name="objectName" [disabled]="true" />
         </mat-form-field>
-        </div>
-        <div class="form"*ngIf=" flag!=3">
-          <mat-form-field>
-            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" [disabled]="flag==4"/>
-          </mat-form-field>
-          </div>
-          <div class="form"*ngIf=" flag!=3">
-            <mat-form-field>
-              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" [disabled]="flag==4"/>
-            </mat-form-field>
-            </div>
+      </div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="City" [(ngModel)]="data.city" name="city" [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Address" [(ngModel)]="data.address" name="address" [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="KAM" [(ngModel)]="data.kam" name="kam" [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Merchandiser" [(ngModel)]="data.merchandiser" name="merchandiser"
+            [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Director" [(ngModel)]="data.director" name="director" [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Commercialist" [(ngModel)]="data.commercialist" name="commercialist"
+            [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Supervisor" [(ngModel)]="data.supervisor" name="supervisor"
+            [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
 
 
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays" name = "merchandiserRevisionDays" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="RequisitionDays" [(ngModel)]="data.requisitionDays" name="requisitionDays"
+            [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays"
+            name="merchandiserRevisionDays" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM" name = "companyShelfSpaceM" [disabled]="flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM"
+            name="companyShelfSpaceM" [disabled]="flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent" name = "companyShelfSpacePercent" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent"
+            name="companyShelfSpacePercent" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd" name = "gainings12Mrsd" [disabled]=" flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd"
+            name="gainings12Mrsd" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent" name = "gainingsVs12mpercent" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent"
+            name="gainingsVs12mpercent" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber" name = "registersNumber" [disabled]=" flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber"
+            name="registersNumber" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf=" flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name = "shelfSpaceM" [disabled]=" flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf=" flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name="shelfSpaceM"
+            [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer" name = "wdpercentCustomer" [disabled]=" flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer"
+            name="wdpercentCustomer" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector" name = "wdpercentSector" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector"
+            name="wdpercentSector" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia" name = "wdpercentSerbia" [disabled]=" flag==4" />
-  </mat-form-field>
-</div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia"
+            name="wdpercentSerbia" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
 
-<div class="form" *ngIf="flag!=3">
-  <mat-form-field>
-    <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule" [disabled]=" flag==4"/>
-  </mat-form-field>
-</div>
-</div>
+      <div class="form" *ngIf="flag!=3">
+        <mat-form-field>
+          <input matInput placeholder="AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule"
+            name="assortmentModule" [disabled]=" flag==4" />
+        </mat-form-field>
+      </div>
+    </div>
 
 
 
-<div mat-dialog-actions>
+    <div mat-dialog-actions>
 
-  <button mat-button class="item2" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
-  <button mat-button class="item2" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
-  <button mat-button class="item2" (click)="close()">Close</button>
-  <div *ngIf="isLoading"
-  style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-  <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
-  </mat-progress-spinner>
-</div>
-</div>
+      <button mat-button class="item2  item2-delete" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"
+        (click)="delete()">Delete</button>
+      <button mat-button class="item2" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1" (click)="update()"
+        [disabled]="!formControl.valid">Ok</button>
+      <button mat-button class="item2" (click)="close()">Close</button>
+      <div *ngIf="isLoading"
+        style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+        <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+        </mat-progress-spinner>
+      </div>
+    </div>
   </form>
-  </div>
-
-
+</div>
