--- a/src/app/dialogs/retailerdialog/retailerdialog.component.css
+++ b/src/app/dialogs/retailerdialog/retailerdialog.component.css
@@ -22,6 +22,10 @@
   border: 2px solid #39ace7;
 }
 
+.item2-delete {
+  color: #ff0000;
+  border: 2px solid #ff0000;
+}
 
 button:hover {
   color: #fff;
