--- a/src/app/dialogs/returndialog/returndialog.component.css
+++ b/src/app/dialogs/returndialog/returndialog.component.css
@@ -21,7 +21,11 @@
     color: #39ace7;
     margin-top: -13%;
     border: 2px solid #39ace7;
+}
 
+.item2-delete {
+    color: #ff0000;
+    border: 2px solid #ff0000;
 }
 
 h3 {
