--- a/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
+++ b/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
@@ -46,7 +46,8 @@
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag == 2" type="submit" (click)="update()"
                 [disabled]="!formControl.valid">Ok</button>
-            <button mat-button class="test" *ngIf="flag == 3" type="submit" (click)="delete()">Delete</button>
+            <button mat-button class="test item2-delete" *ngIf="flag == 3" type="submit"
+                (click)="delete()">Delete</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
             <div *ngIf="isLoading"
                 style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
