--- a/src/app/dialogs/userdialog/userdialog.component.html
+++ b/src/app/dialogs/userdialog/userdialog.component.html
@@ -48,14 +48,14 @@
         [disabled]="!formControl.valid">Ok</button>
       <button mat-button class="test" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1" (click)="update()"
         [disabled]="!formControl.valid">Ok</button>
-      <button mat-button class="test" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"
+      <button mat-button class="test item2-delete" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"
         (click)="delete()">Delete</button>
       <button mat-button class="test" (click)="close()">Cancel</button>
       <div *ngIf="isLoading"
-      style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-      <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
-      </mat-progress-spinner>
-    </div>
+        style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+        <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+        </mat-progress-spinner>
+      </div>
     </div>
   </form>
 </div>
