--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -14,7 +14,12 @@
         [fixedBottomGap]="0">
         <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['dashboard']">
-                <mat-icon class="nav-icon">dashboard</mat-icon>Dashboard
+                <mat-icon class="nav-icon">dashboard</mat-icon>Feedback Statistics
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['position-dashboard']">
+                <mat-icon class="nav-icon">dashboard</mat-icon>Position Statistics
             </a>
         </mat-nav-list>
         <mat-nav-list>
