Poruke dodate u are you sure dialog

--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -1,5 +1,6 @@
-<div class="parentcontainer" style="margin-bottom: 5%;">
+<p class="center" *ngIf="isUploading"> Don't exit this page while uploading excels partially!</p><br>
 
+<div class="parentcontainer" style="margin-bottom: 5%;">
   <div class="container">
     <h3 class="uploadHeading " style="color:#56baed;">Objects</h3>
     <input type="file" #objectFileDropRef (change)="uploadObjectsFile($event)" id="objectFileDropRef" hidden />
