--- a/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.html
+++ b/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h3 mat-dialog-title>Are You Sure?</h3>
-
+    <h3 mat-dialog-title>Are You Sure?</h3><br>
+    <p style="font-family:Arial, Helvetica, sans-serif">{{message}}</p>
     <form class="mat-dialog-content" #formControl="ngForm">
         <div mat-dialog-actions class="wrap">
 
