--- a/src/app/components/position-dashboard/position-dashboard.component.html
+++ b/src/app/components/position-dashboard/position-dashboard.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <mat-card class="card chart-card">
-    <mat-card-title>Secondary position classes</mat-card-title>
+    <mat-card-title>Secondary positions by classes</mat-card-title>
     <mat-card-content>
         <div class="chart">
             <app-vertical-bar-chart [data]="positionClassResult" *ngIf="positionClassResult">
@@ -33,7 +33,7 @@
 </mat-card>
 
 <mat-card class="card chart-card">
-    <mat-card-title>Secondary position types</mat-card-title>
+    <mat-card-title>Secondary positions by types</mat-card-title>
     <mat-card-content>
         <div class="chart">
             <app-advanced-pie-chart [data]="positionTypeResult" [label]="'Total positions'" *ngIf="positionTypeResult">
@@ -43,7 +43,7 @@
 </mat-card>
 
 <mat-card class="card chart-card">
-    <mat-card-title>Secondary position product categories</mat-card-title>
+    <mat-card-title>Secondary positions by product categories</mat-card-title>
     <mat-card-content>
         <div class="chart">
             <app-vertical-bar-chart [data]="productCategoryResult" *ngIf="productCategoryResult">
