No data za receivere

--- a/src/app/components/store-check-receiver/store-check-receiver.component.html
+++ b/src/app/components/store-check-receiver/store-check-receiver.component.html
@@ -70,5 +70,5 @@
         <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
         </mat-progress-spinner>
     </div>
-    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No retailers</mat-toolbar>
+    <mat-toolbar class="toolbar" *ngIf="noData">No data</mat-toolbar>
 </div>
