Prihvatanje samo brojeva za rebate

--- a/src/app/dialogs/promo-evaluation-dialog/promo-evaluation-dialog.component.html
+++ b/src/app/dialogs/promo-evaluation-dialog/promo-evaluation-dialog.component.html
@@ -32,12 +32,11 @@
 
         <div class="form">
             <mat-form-field>
-                <input matInput id="rebate" name="rebate" formControlName="rebate" placeholder="Rabate %"
+                <input type="number" matInput id="rebate" name="rebate" formControlName="rebate" placeholder="Rabate %"
                     [(ngModel)]="data.rebate" required />
             </mat-form-field>
 
         </div>
-
 
         <div mat-dialog-actions>
             <div *ngIf="isLoading"
