Moduli aplikacije podeseni za prvu stranicu

--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -18,7 +18,8 @@
       <img src="../../../assets/belo.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
     </p>
-    <div style="justify-content: center;margin-right: 50px;" [routerLink]="['/chooseObject/addStoreCheck']">STORE CHECK</div>
+    <div style="justify-content: center;margin-right: 50px;" [routerLink]="['/chooseObject/addStoreCheck']">STORE CHECK
+    </div>
   </div>
 
   <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
@@ -44,14 +45,6 @@
         style="margin-top:15px; float:left; margin-left:20px;">
     </p>
     <div style="justify-content: center;margin-right: 50px;">RETURNS</div>
-  </div>
-
-  <div class="item2 resolve-fb fadeIn third" (click)="logout()">
-    <p>
-      <img src="../../../assets/exit.png" width="30px" height="30px"
-        style="margin-top:10px; float:left; margin-left:5px;">
-    </p>
-    <div style="justify-content: center;">LOG OUT</div>
   </div>
 
   <!--
