--- a/src/app/components/modules/modules.component.html
+++ b/src/app/components/modules/modules.component.html
@@ -10,7 +10,8 @@
         <div style="justify-content: center;margin-right: 50px;">STORE METRICS</div>
     </div>
 
-    <div class="item promo-item fadeIn second" [routerLink]="['/promo']">
+    <div class="disableditem resolve-fb fadeIn second">
+        <!-- ENABLE: [routerLink]="['/promo']"-->
         <p>
             <img src="../../../assets/icons8-price-tag-48.png" width="50px" height="50px"
                 style="margin-top:15px; float:left; margin-left:20px;">
@@ -18,7 +19,7 @@
         <div style="justify-content: center;margin-right: 30px;">PROMO MANAGEMENT</div>
     </div>
 
-    <div class="item2 promo-item fadeIn third" (click)="logout()">
+    <div class="item2 resolve-fb fadeIn third" (click)="logout()">
         <p>
             <img src="../../../assets/exit.png" width="30px" height="30px"
                 style="margin-top:10px; float:left; margin-left:5px;">
