--- a/src/app/components/modules/modules.component.css
+++ b/src/app/components/modules/modules.component.css
@@ -1,23 +1,108 @@
-.center {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: -30px;
-    margin-top: -20px;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
+.header {
+    background-color: #56baed;
+    color: #fff;
+    text-align: center;
+    padding: 50px 0;
 }
 
-.sc-icon {
-    width: 200px;
-    height: 200px;
+.header h3 {
+    margin: 20px 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+.noDataMessage {
+    background-color: white;
+    color: #56baed;
 }
 
 .menu {
     background-color: #fff;
     width: 100%;
     text-align: center;
+}
+
+.item {
+    background-color: #39ace7;
+    color: #fff;
+    width: 350px;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    border-radius: 10px;
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    letter-spacing: 1px;
+    margin: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+
+
+}
+
+.disableditem {
+    background-color: #8d9294;
+    color: #fff;
+    width: 350px;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    border-radius: 10px;
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    letter-spacing: 1px;
+    margin: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+
+
+}
+
+.item2 {
+
+    background-color: white;
+    color: #39ace7;
+    width: 130px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 17px;
+    letter-spacing: 0.5px;
+    font-weight: bold;
+    font-family: sans-serif;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    position: relative;
+    bottom: 1;
+    margin: auto;
+
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
+
+}
+
+.item2:hover {
+    background-color: #39ace7;
+    color: #fff;
+    transition: 0.3s;
+}
+
+.item:hover {
+    background-color: #fff;
+    color: #39ace7;
+    transition: 0.3s;
+}
+
+.resolve-fb {
+    margin-top: 30px;
 }
 
 .fadeInDown {
@@ -122,45 +207,28 @@
     animation-delay: 0.8s;
 }
 
-.item {
+.center {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -30px;
+    margin-top: -20px;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.noresize {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.sc-icon {
+    width: 200px;
+    height: 200px;
+}
+
+.mat-nortz {
     background-color: #39ace7;
     color: #fff;
-    width: 350px;
-    height: 80px;
-    line-height: 80px;
-    text-align: center;
-    border-radius: 10px;
-    font-family: sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    border: 2px solid #39ace7;
-    cursor: pointer;
-    letter-spacing: 1px;
-    margin: auto;
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
-}
-
-.item2 {
-    background-color: white;
-    color: #39ace7;
-    width: 130px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 17px;
-    letter-spacing: 0.5px;
-    font-weight: bold;
-    font-family: sans-serif;
-    border: 2px solid #39ace7;
-    cursor: pointer;
-    position: relative;
-    bottom: 1;
-    margin: auto;
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
-}
-
-.promo-item {
-    margin-top: 30px;
 }
