--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -22,7 +22,8 @@
     </div>
   </div>
 
-  <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
+  <div class="disableditem resolve-fb fadeIn second">
+    <!-- ENABLE: [routerLink]="['/chooseObject/positions']"-->
     <p>
       <img src="../../../assets/belopoz.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
@@ -30,7 +31,7 @@
     <div style="justify-content: center;margin-right: 30px;">SECONDARY POSITIONS</div>
   </div>
 
-  <div class="disableditem resolve-fb fadeIn second" [routerLink]="['/product']">
+  <div class="disableditem resolve-fb fadeIn second">
     <!-- ENABLE: [routerLink]="['/product']"-->
     <p>
       <img src="../../../assets/icons8-barcode-scanner-64.png" width="50px" height="50px"
@@ -39,13 +40,17 @@
     <div style="justify-content: center;margin-right: 50px;">PRICE SCANNER</div>
   </div>
 
-  <div class="disableditem resolve-fb fadeIn second" [routerLink]="['/chooseObject/returns']">
+  <div class="disableditem resolve-fb fadeIn second">
+    <!-- ENABLE: [routerLink]="['/chooseObject/returns']"-->
     <p>
       <img src="../../../assets/icons8-u-turn-to-left-30.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
     </p>
     <div style="justify-content: center;margin-right: 50px;">RETURNS</div>
   </div>
+
+  <button mat-stroked-button color="primary" class="item2 resolve-fb"
+    [routerLink]="['/modules']">Exit<mat-icon>exit_to_app</mat-icon></button>
 
   <!--
   <button mat-raised-button class="fadeIn" color="primary" color="nortz" (click)="logout()">
